made about me fixed height on tablet

--- a/index.css
+++ b/index.css
@@ -252,6 +252,7 @@ footer svg {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 0.5rem;
     max-width: 40%;
+    height: 278px;
     position: absolute;
     top: 70%;
     right: 10%;
